src/objects/BaselineCondition__c.object
<CustomObject>
    <fields>
        <fullName>Attribution__c</fullName>
        <defaultValue>&quot;0-Baseline&quot;</defaultValue>
        <label>Attribution</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BaselineSymptomsForm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Baseline Symptoms Form</label>
        <referenceTo>BaselineSymptomsForm__c</referenceTo>
        <relationshipLabel>Baseline Conditions</relationshipLabel>
        <relationshipName>Baseline_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Daignosis__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Daignosis</label>
        <referenceTo>Daignosis_Master__c</referenceTo>
        <relationshipLabel>Baseline Conditions</relationshipLabel>
        <relationshipName>Baseline_Conditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DiagnosisType__c</fullName>
        <label>Diagnosis Type</label>
        <picklist>
            <picklistValues>
                <fullName>Condition</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Other Condition</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Effective_Time__c</fullName>
        <label>Effective Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Day__c</fullName>
        <label>End_Day</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Month__c</fullName>
        <label>End_Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Year__c</fullName>
        <label>End_Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onset_Date__c</fullName>
        <label>Onset Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Onset_Day__c</fullName>
        <label>Onset_Day</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onset_Month__c</fullName>
        <label>Onset_Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Onset_Year__c</fullName>
        <label>Onset_Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherDaignosis__c</fullName>
        <label>OtherDaignosis</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolved__c</fullName>
        <label>Resolved</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Severity_Grade__c</fullName>
        <label>Severity Grade</label>
        <picklist>
            <picklistValues>
                <fullName>1-Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-Life threatening or Disabling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-Fatal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controlled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disease Free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Reported</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Baseline Condition</label>
    <nameField>
        <label>Baseline Condition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Baseline Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>